fix animations; include wp for animation; text-alignment

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -33,6 +33,12 @@
     }
 }
 
+.alert-wp{
+    .alert-message{
+        color: #ffeb3b !important;
+    }
+}
+
 .bar-button-ios{
     color: #000 !important;
 
