--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -6,3 +6,7 @@ page-settings {
         }
     }
 }
+
+.alert-wp .alert-radion-button-wp[aria-checked="true"] .alert-radio-label{
+    color: #ffeb3b !important;
+}
