--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -7,6 +7,8 @@ $font-path: "../assets/fonts";
 // rtl styles in your app. For more info, please see:
 // http://ionicframework.com/docs/theming/rtl-support/
 $app-direction: ltr;
+$font-awesome-path: "../fonts";
+
 @import "ionic.globals";
 // Shared Variables
 // --------------------------------------------------
@@ -63,4 +65,4 @@ $tabs-tab-color-active: map-get($colors, 'primary');
 // --------------------------------------------------
 @import "roboto";
 @import "noto-sans";
-//@import "font-awesome";
+@import "font-awesome";
