--- a/src/components/keyboard/keyboard.scss
+++ b/src/components/keyboard/keyboard.scss
@@ -12,10 +12,10 @@ keyboard {
                 background-color: rgb(51, 51, 51);
                 border: 1px solid rgb(61, 61, 61);
                 width: 25%;
-                height: 2.5em;
-                & + &{
-                    margin-left: -4px;
-                }
+                height: 3em;
+            }
+            .key + .key{
+                margin-left: -4px !important;
             }
         }
     }
