--- a/src/pages/input-modal/input-modal.scss
+++ b/src/pages/input-modal/input-modal.scss
@@ -3,4 +3,18 @@ page-input-modal {
         text-align: center;
         font-style: italic;
     }
+
+    .input-labels{
+        margin: 0 4px 11px !important;
+        text-align: center;
+
+        .input-label{
+            font-size: 2em;
+            border-bottom: 2px solid #eeeeee;
+            width: 100%;
+            height: 100%;
+            display: inline-block;
+        }
+        
+    }
 }
