--- a/src/components/keyboard/keyboard.scss
+++ b/src/components/keyboard/keyboard.scss
@@ -13,9 +13,30 @@ keyboard {
                 border: 1px solid rgb(61, 61, 61);
                 width: 25%;
                 height: 3em;
+
+                &:active, &:hover{
+                    background-color: rgb(207, 207, 207);
+                    color: rgb(51, 51, 51);
+                }
             }
             .key + .key{
                 margin-left: -4px !important;
+            }
+        }
+    }
+
+    .buttons{
+        background-color: #191919;
+        display: flex;
+        justify-content: center;
+        .slide{
+            height: 1.5em;
+            font-size: 1.4em;
+            border-radius: 0;
+            opacity: 0.5;
+
+            &:hover, &:active{
+                opacity: 1;
             }
         }
     }
