initial alternative to keyboard; initial dynamic theme

--- a/src/pages/author-modal/author-modal.scss
+++ b/src/pages/author-modal/author-modal.scss
@@ -11,4 +11,10 @@ page-author-modal {
             }
         }
     }
+    .disclaimer{
+        position: absolute;
+        bottom: 10px;        
+        left: 20px;
+        font-style: italic;
+    }
 }
