--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,7 +24,7 @@ $font-awesome-path: "../fonts";
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
 $colors: ( //primary:    #488aff,
-primary: #ffeb3b, secondary: #32db64, danger: #f70000, light: #f4f4f4, dark: #222);
+primary: #ffeb3b, secondary: #32db64, danger: #f70000, light: #f4f4f4, dark: #222, tan: #f9f1e4);
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
