--- a/src/pages/settings-popover/settings-popover.scss
+++ b/src/pages/settings-popover/settings-popover.scss
@@ -25,10 +25,10 @@ page-settings-popover {
                 background: map-get($colors, 'light');
             }
             &.theme-tan{
-                background: map-get($colors, 'tan');
+                background: map-get($colors, 'semi');
             }
             &.theme-dark{
-                background: map-get($colors, 'dark');
+                background: map-get($colors, 'dark-2');
             }
             &.theme-pic{
                 background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('../assets/images/Congregation%20Singing.jpg');
