--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -4,6 +4,9 @@ page-settings {
         ion-list-header {
             margin: 0 !important;
         }
+        ion-list ion-item .item-inner{
+            border-bottom: none !important;
+        }
     }
 }
 
