--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -96,3 +96,7 @@
 .item-ios[detail-push] .item-inner, button.item-ios:not([detail-none]) .item-inner, a.item-ios:not([detail-none]) .item-inner{
     background-image: url("data:image/svg+xml;charset=utf-8,<svg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%2012%2020'><path%20d='M2,20l-2-2l8-8L0,2l2-2l10,10L2,20z'%20fill='white'/></svg>") !important;
 }
+
+.list-md .item-block .item-inner{
+    border-bottom: 1px solid #000;
+}
