--- a/src/pages/settings-popover/settings-popover.scss
+++ b/src/pages/settings-popover/settings-popover.scss
@@ -1,9 +1,13 @@
 page-settings-popover {
-    height: 300px;
+    min-height: 18em;
+    height: auto;
+    display: block;
     ion-content{
         height: inherit;
+        min-height: inherit;
         .scroll-content{
             height: inherit;
+            min-height: inherit;
         }
     }
 }
