--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -40,8 +40,8 @@
 }
 
 @font-face{
-  font-family: "Great Vibes";
-  src: url("../assets/fonts/greatvibes/GreatVibes-Regular.ttf") format("truetype");
+  font-family: "Princess Sofia";
+  src: url("../assets/fonts/princesssofia/PrincessSofia-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
