attempt to fix unclickable navigation buttons and keyboard display

--- a/src/pages/settings-popover-items/settings-popover-items.scss
+++ b/src/pages/settings-popover-items/settings-popover-items.scss
@@ -17,5 +17,6 @@ page-settings-popover-items {
     }
     ion-item{
         background-color: inherit !important;
+        z-index: 300;
     }
 }
