--- a/src/pages/reader/reader.scss
+++ b/src/pages/reader/reader.scss
@@ -22,9 +22,15 @@ page-reader {
         .bar-button-ios{
             color: #000000;
         }
+        ion-navbar[color="dark"]{
+            ion-title .toolbar-title{
+                color: yellow;
+            }
+        }
     }
     ion-content {
         user-select: text !important;
+        touch-action: pan-y !important;
         &.theme-pic {
             background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('../assets/images/Congregation%20Singing.jpg');
             background-size: cover;
@@ -74,7 +80,7 @@ page-reader {
         .hymn-content {
             margin-bottom: 20px;
             user-select: inherit !important;
-            touch-action: auto !important;
+            touch-action: pan-y !important;
             .hymn-title {
                 margin-bottom: 20px;
                 font-size: inherit;
@@ -82,35 +88,38 @@ page-reader {
                     display: inline;
                 }
             }
-            .hymn-stanza {
-                display: block;
-                margin-bottom: 1em;
-                user-select: text !important;
-                .hymn-line {
+            .lyrics{
+                touch-action: pan-y !important;
+                .hymn-stanza {
                     display: block;
-                    line-height: 150%;
+                    margin-bottom: 1em;
                     user-select: text !important;
+                    .hymn-line {
+                        display: block;
+                        line-height: 150%;
+                        user-select: text !important;
+                    }
                 }
-            }
-            .hymn-refrain {
-                display: block;
-                margin-bottom: 20px;
-                user-select: text !important;
-                .hymn-line {
+                .hymn-refrain {
                     display: block;
-                    line-height: 150%;
+                    margin-bottom: 20px;
                     user-select: text !important;
+                    .hymn-line {
+                        display: block;
+                        line-height: 150%;
+                        user-select: text !important;
+                    }
                 }
-            }
-            .hymn-stanza:before {
-                display: block;
-            }
-            .hymn-refrain:before {
-                display: block;
-                content: "Refrain:";
-            }
-            .hymn-stanza:nth-child(1):before {
-                content: "Stanza 1:";
+                .hymn-stanza:before {
+                    display: block;
+                }
+                .hymn-refrain:before {
+                    display: block;
+                    content: "Refrain:";
+                }
+                .hymn-stanza:nth-child(1):before {
+                    content: "Stanza 1:";
+                }
             }
         }
     }
