--- a/src/pages/settings-popover/settings-popover.scss
+++ b/src/pages/settings-popover/settings-popover.scss
@@ -1,7 +1,7 @@
 page-settings-popover {
-    min-height: 18em;
-    height: auto;
+    max-height: 29em;
     display: block;
+    min-height: 23em;
     ion-content{
         height: inherit;
         min-height: inherit;
