slider intro images

--- a/src/components/intro-slider/intro-slider.html
+++ b/src/components/intro-slider/intro-slider.html
@@ -1,16 +1,10 @@
 <!-- Generated template for the IntroSliderComponent component -->
 <ion-slides pager>
-
-  <ion-slide style="background-color: green">
-    <h2>Slide 1</h2>
+  <ion-slide *ngFor="let slide of slideList">
+    <div *ngIf="platform.is(slide.size)">      
+      <img [src]="slide.img" />
+      <button ion-button clear>SKIP</button>
+      <h2>{{ slide.description }}</h2>
+    </div>        
   </ion-slide>
-
-  <ion-slide style="background-color: blue">
-    <h2>Slide 2</h2>
-  </ion-slide>
-
-  <ion-slide style="background-color: red">
-    <h2>Slide 3</h2>
-  </ion-slide>
-
 </ion-slides>
