--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -114,3 +114,9 @@
 .popover-content{
     height: 23em;
 }
+
+ion-header ion-navbar[color="dark"]{
+    ion-title .toolbar-title{
+        color: #ffeb3b;
+    }
+}
