--- a/src/components/intro-slider/intro-slider.html
+++ b/src/components/intro-slider/intro-slider.html
@@ -1,10 +1,25 @@
 <!-- Generated template for the IntroSliderComponent component -->
-<ion-slides pager>
-  <ion-slide *ngFor="let slide of slideList">
-    <div *ngIf="platform.is(slide.size)">      
-      <img [src]="slide.img" />
-      <button ion-button clear>SKIP</button>
-      <h2>{{ slide.description }}</h2>
-    </div>        
+<ion-toolbar color="dark">
+  <ion-buttons end>
+    <button ion-button clear (click)="exitSlides()" color="primary">Skip</button>
+  </ion-buttons>
+</ion-toolbar>
+<ion-slides pager centeredSlides="true" effect="slide">
+  <ion-slide *ngFor="let slide of slideList; let lastSlide = last">
+    <div class="icon-container" *ngIf="slide.iconType == 'img'">
+      <img [src]="slide.icon"/>
+    </div>
+    <div class="icon-container" *ngIf="slide.iconType == 'ion'">
+      <ion-icon *ngFor="let i of slide.icon" [name]="i"></ion-icon>
+    </div>
+    <div class="icon-container" *ngIf="slide.iconType == 'fa'">
+      <span *ngFor="let i of slide.icon" class="fa fa-{{ i }}"></span>
+    </div>
+    <h2>{{ slide.title }}</h2>
+    <p *ngIf="slide.description">{{ slide.description }}</p>
+    <button ion-button color="primary" *ngIf="lastSlide" icon-right (click)="exitSlides()">
+      Go
+      <ion-icon name="arrow-forward"></ion-icon>
+    </button>
   </ion-slide>
 </ion-slides>
