--- a/src/components/intro-slider/intro-slider.scss
+++ b/src/components/intro-slider/intro-slider.scss
@@ -1,3 +1,21 @@
 intro-slider {
+    ion-toolbar{
+        position: absolute !important;
+        top: 0;
+    }
+    .swiper-container{
+        background: map-get($colors, 'dark') !important;
+    }
+    .swiper-pagination{
+        background: map-get($colors, 'dark') !important;
+        .swiper-pagination-bullet{
+            background: #fff;
+            opacity: 0.6;
 
+            &.swiper-pagination-bullet-active{
+                background: map-get($colors, 'primary') !important;
+                opacity: 1;
+            }
+        }
+    }
 }
