--- a/src/pages/reader/reader.scss
+++ b/src/pages/reader/reader.scss
@@ -123,16 +123,17 @@ page-reader {
         border-bottom: 2px solid #000000 !important;
     }
     
-    .player{
+    audio-track{
         display: flex;
-        button{
-            color: map-get($colors, 'light');
-            padding-top: 6px;
-        }
-        ion-range{
+        .progress{
             flex-grow: 1;
-            [range-left], [range-right]{
-                color: map-get($colors, 'light');
+            audio-track-progress-bar{
+                margin: 27.1px 0 0;
+                input{
+                    background-image: -webkit-gradient(linear,left top, right top, color-stop(0.15, #C5C5C5));
+                    height: 4px;
+                    margin: -6px 0 0;
+                }
             }
         }
     }
