--- a/src/pages/reader/reader.scss
+++ b/src/pages/reader/reader.scss
@@ -128,11 +128,94 @@ page-reader {
         .progress{
             flex-grow: 1;
             audio-track-progress-bar{
-                margin: 27.1px 0 0;
-                input{
+                margin: 20px 0 0;
+                input[type=range]{
                     background-image: -webkit-gradient(linear,left top, right top, color-stop(0.15, #C5C5C5));
                     height: 4px;
-                    margin: -6px 0 0;
+                    margin: -4.5px 0 0;
+
+                    &::-webkit-slider-runnable-track {
+                        width: 100%;
+                        height: 4px;
+                        cursor: pointer;
+                        animate: 0.2s;
+                        background: #ddd;
+                        border-radius: 25px;
+                        border: 0px solid #000101;
+                      }
+                      &::-webkit-slider-thumb {
+                        box-shadow: 0px 0px 0px #000000;
+                        border: 0px solid #000000;
+                        height: 30px;
+                        width: 30px;
+                        border-radius: 50%;
+                        background: #fff;
+                        cursor: pointer;
+                        -webkit-appearance: none;
+                        margin-top: -13px;
+                      }
+                      &:focus::-webkit-slider-runnable-track {
+                        background: #ddd;
+                      }
+                      &::-moz-range-track {
+                        width: 100%;
+                        height: 4px;
+                        cursor: pointer;
+                        animate: 0.2s;
+                        box-shadow: 0px 0px 0px #000000;
+                        background: #ddd;
+                        border-radius: 25px;
+                        border: 0px solid #000101;
+                      }
+                      &::-moz-range-thumb {
+                        box-shadow: 0px 0px 0px #000000;
+                        border: 0px solid #000000;
+                        height: 30px;
+                        width: 30px;
+                        border-radius: 50%;
+                        background: #fff;
+                        cursor: pointer;
+                        -webkit-appearance: none;
+                        margin-top: -13px;
+                      }
+                      &::-ms-track {
+                        width: 100%;
+                        height: 4px;
+                        cursor: pointer;
+                        animate: 0.2s;
+                        background: transparent;
+                        border-color: transparent;
+                        color: transparent;
+                      }
+                      &::-ms-fill-lower {
+                        background: #ddd;
+                        border: 0px solid #000101;
+                        border-radius: 50px;
+                        box-shadow: 0px 0px 0px #000000;
+                      }
+                      &::-ms-fill-upper {
+                        background: #ddd;
+                        border: 0px solid #000101;
+                        border-radius: 50px;
+                        box-shadow: 0px 0px 0px #000000;
+                      }
+                      &::-ms-thumb {
+                        box-shadow: 0px 0px 0px #000000;
+                        border: 0px solid #000000;
+                        height: 30px;
+                        width: 30px;
+                        border-radius: 50%;
+                        background: #fff;
+                        cursor: pointer;
+                        -webkit-appearance: none;
+                        margin-top: -13px;
+                      }
+                      &:focus::-ms-fill-lower {
+                        background: #ddd;
+                      }
+                      &:focus::-ms-fill-upper {
+                        background: #ddd;
+                      }
                 }
             }
         }
