--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -23,11 +23,21 @@ page-home {
     }
     ion-card {
         &.active, &:hover{
-            box-shadow: 0px 1px 20px 2px #ffeb3b;
+            border: 1px solid #ffeb3b;
         }
         .card-image {
             height: 200px;
             overflow: hidden;
+            text-align: center;
+
+            ion-icon{
+                font-size: 15em;
+            }
+
+            img[src^="data:image"]{
+                width: 11em;
+                margin: 25px auto;
+            }
         }
         ion-card-content {
             ion-card-title {
@@ -38,6 +48,20 @@ page-home {
                 font-size: 0.8em !important;
                 color: #fff;
             }
+        }
+    }
+
+    .banner{
+        text-align: center;
+        &[type="error"]{
+            background: map-get($colors, 'danger');
+        }
+        &[type="success"]{
+            background: map-get($colors, 'secondary');
+        }
+        &[type="progress"]{
+            background: map-get($colors, 'primary');
+            color: #222;
         }
     }
     @media screen and (min-width: 283px) and (max-width: 575px) {
