--- a/src/pages/midi-popover/midi-popover.scss
+++ b/src/pages/midi-popover/midi-popover.scss
@@ -2,4 +2,12 @@ page-midi-popover {
     ion-select{
         width: 100%;
     }
+    ion-item{
+        p{
+            color: #fff !important;
+        }
+        .item-inner{
+            border: none !important;
+        }
+    }
 }
