--- a/src/pages/reader/reader.scss
+++ b/src/pages/reader/reader.scss
@@ -101,7 +101,7 @@ page-reader {
                     user-select: text !important;
                     .hymn-line {
                         display: block;
-                        line-height: 150%;
+                        line-height: 125%;
                         user-select: text !important;
                     }
                 }
@@ -129,105 +129,13 @@ page-reader {
 
             ion-range{
                 flex-grow: 2;
+
+                .range-knob-handle .range-knob{
+                    background: map-get($colors, 'light') !important;
+                }
             }
             ion-label {
                 color: map-get($colors, 'light') !important;
-            }
-        }
-    }
-    audio-track {
-        display: flex;
-        .progress {
-            flex-grow: 1;
-            audio-track-progress-bar {
-                margin: 20px 0 0;
-                input[type=range] {
-                    background-image: -webkit-gradient(linear, left top, right top, color-stop(0.15, #C5C5C5));
-                    height: 4px;
-                    margin: -4.5px 0 0;
-                    &::-webkit-slider-runnable-track {
-                        width: 100%;
-                        height: 4px;
-                        cursor: pointer;
-                        animate: 0.2s;
-                        background: #ddd;
-                        border-radius: 25px;
-                        border: 0px solid #000101;
-                    }
-                    &::-webkit-slider-thumb {
-                        box-shadow: 0px 0px 0px #000000;
-                        border: 0px solid #000000;
-                        height: 30px;
-                        width: 30px;
-                        border-radius: 50%;
-                        background: #fff;
-                        cursor: pointer;
-                        -webkit-appearance: none;
-                        margin-top: -13px;
-                    }
-                    &:focus::-webkit-slider-runnable-track {
-                        background: #ddd;
-                    }
-                    &::-moz-range-track {
-                        width: 100%;
-                        height: 4px;
-                        cursor: pointer;
-                        animate: 0.2s;
-                        box-shadow: 0px 0px 0px #000000;
-                        background: #ddd;
-                        border-radius: 25px;
-                        border: 0px solid #000101;
-                    }
-                    &::-moz-range-thumb {
-                        box-shadow: 0px 0px 0px #000000;
-                        border: 0px solid #000000;
-                        height: 30px;
-                        width: 30px;
-                        border-radius: 50%;
-                        background: #fff;
-                        cursor: pointer;
-                        -webkit-appearance: none;
-                        margin-top: -13px;
-                    }
-                    &::-ms-track {
-                        width: 100%;
-                        height: 4px;
-                        cursor: pointer;
-                        animate: 0.2s;
-                        background: transparent;
-                        border-color: transparent;
-                        color: transparent;
-                    }
-                    &::-ms-fill-lower {
-                        background: #ddd;
-                        border: 0px solid #000101;
-                        border-radius: 50px;
-                        box-shadow: 0px 0px 0px #000000;
-                    }
-                    &::-ms-fill-upper {
-                        background: #ddd;
-                        border: 0px solid #000101;
-                        border-radius: 50px;
-                        box-shadow: 0px 0px 0px #000000;
-                    }
-                    &::-ms-thumb {
-                        box-shadow: 0px 0px 0px #000000;
-                        border: 0px solid #000000;
-                        height: 30px;
-                        width: 30px;
-                        border-radius: 50%;
-                        background: #fff;
-                        cursor: pointer;
-                        -webkit-appearance: none;
-                        margin-top: -13px;
-                    }
-                    &:focus::-ms-fill-lower {
-                        background: #ddd;
-                    }
-                    &:focus::-ms-fill-upper {
-                        background: #ddd;
-                    }
-                }
             }
         }
     }
